docs: add auth bearer to swagger docs
