# docs/swagger.json
@@ -127,6 +127,11 @@
         },
         "/user/me": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -189,26 +194,26 @@
         "ErrCode": {
             "type": "string",
             "enum": [
+                "USER_INVALID_DATA",
+                "USER_ALREADY_EXISTS",
+                "USER_NOT_FOUND",
+                "SERVER_INTERNAL_ERROR",
+                "SERVER_NOT_RESPONDING",
                 "AUTH_INVALID_TOKEN",
                 "AUTH_EXPIRED_TOKEN",
                 "AUTH_TOKEN_NOT_PROVIDED",
-                "AUTH_INVALID_EMAIL_OR_PASSWORD",
-                "SERVER_INTERNAL_ERROR",
-                "SERVER_NOT_RESPONDING",
-                "USER_INVALID_DATA",
-                "USER_ALREADY_EXISTS",
-                "USER_NOT_FOUND"
+                "AUTH_INVALID_EMAIL_OR_PASSWORD"
             ],
             "x-enum-varnames": [
+                "ErrUserInvalidData",
+                "ErrUserAlreadyExists",
+                "ErrUserNotFound",
+                "ErrServerInternalError",
+                "ErrServerNotResponding",
                 "ErrAuthInvalidToken",
                 "ErrAuthExpiredToken",
                 "ErrAuthTokenNotProvided",
-                "ErrAuthInvalidEmailOrPassword",
-                "ErrServerInternalError",
-                "ErrServerNotResponding",
-                "ErrUserInvalidData",
-                "ErrUserAlreadyExists",
-                "ErrUserNotFound"
+                "ErrAuthInvalidEmailOrPassword"
             ]
         },
         "HttpOutput": {
@@ -257,6 +262,14 @@
                     "example": "StrongPassword1234"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
